orbbec: Import files from rtabmap and ros_astra_camera projects
The rtabmap openni2 camera driver is not able to use separate devices for rgb vs depth/IR streams.
On the other hand, some Orbbec camera drivers only support advertising depth streams through openni2
while relying on libuvc for color stream output. This new Orbbec rgbd camera driver aims to unify these
two approaches. This PR is required for our lab to run experiments with robots utilizing such devices.

--- a/corelib/src/CMakeLists.txt
+++ b/corelib/src/CMakeLists.txt
@@ -27,6 +27,7 @@ SET(SRC_FILES
     camera/CameraOpenni.cpp
     camera/CameraOpenNI2.cpp
     camera/CameraOpenNICV.cpp
+    camera/CameraOrbbec.cpp
     camera/CameraRealSense.cpp
     camera/CameraRealSense2.cpp
     camera/CameraRGBDImages.cpp
@@ -41,6 +42,7 @@ SET(SRC_FILES
     camera/CameraMyntEye.cpp
     camera/CameraDepthAI.cpp
 	camera/CameraSeerSense.cpp
+    camera/uvc_camera_driver.cpp
     
     EpipolarGeometry.cpp
     VisualWord.cpp
