orbbec: Add CMake libuvc dependency
Expose simple UVC color camera setters through the rtabmap Camera API.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -183,6 +183,7 @@ option(WITH_K4W2          "Include Kinect for Windows v2 support" ON)
 option(WITH_K4A           "Include Kinect for Azure support"     ON)
 option(WITH_OPENNI        "Include OpenNI support"               ON)
 option(WITH_OPENNI2       "Include OpenNI2 support"              ON)
+option(WITH_LIBUVC        "Include libuvc support"               ON)
 option(WITH_DC1394        "Include dc1394 support"               ON)
 option(WITH_G2O           "Include g2o support"                  ON)
 option(WITH_GTSAM         "Include GTSAM support"                ON)
@@ -468,6 +469,13 @@ IF(WITH_OPENNI2 OR OpenNI2_FOUND)
        MESSAGE(STATUS "Found OpenNI2: ${OpenNI2_INCLUDE_DIRS}")
     ENDIF(OpenNI2_FOUND)
 ENDIF(WITH_OPENNI2 OR OpenNI2_FOUND)
+
+IF(WITH_LIBUVC)
+    FIND_PACKAGE(libuvc QUIET)
+    IF(libuvc_FOUND)
+       MESSAGE(STATUS "Found libuvc: ${libuvc_INCLUDE_DIRS}")
+    ENDIF(libuvc_FOUND)
+ENDIF(WITH_LIBUVC)
 
 IF(WITH_DC1394)
     FIND_PACKAGE(DC1394 QUIET)
@@ -970,6 +978,9 @@ IF(NOT (OpenNI_FOUND AND WITH_OPENNI))
 ENDIF()
 IF(NOT OpenNI2_FOUND)
    SET(OPENNI2 "//")
+ENDIF()
+IF(NOT libuvc_FOUND)
+   SET(LIBUVC "//")
 ENDIF()
 IF(NOT DC1394_FOUND)
    SET(DC1394 "//")
