--- a/Version.h.in
+++ b/Version.h.in
@@ -47,6 +47,7 @@ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 @VERTIGO@#define RTABMAP_VERTIGO
 @OPENNI@#define RTABMAP_OPENNI
 @OPENNI2@#define RTABMAP_OPENNI2
+@LIBUVC@#define RTABMAP_LIBUVC
 @FREENECT@#define RTABMAP_FREENECT
 @FREENECT2@#define RTABMAP_FREENECT2
 @K4W2@#define RTABMAP_K4W2
