--- a/corelib/src/CMakeLists.txt
+++ b/corelib/src/CMakeLists.txt
@@ -274,6 +274,17 @@ IF(OpenNI2_FOUND)
 	)
 ENDIF(OpenNI2_FOUND)
 
+IF(libuvc_FOUND)
+	SET(INCLUDE_DIRS
+		${INCLUDE_DIRS}
+		${libuvc_INCLUDE_DIRS}
+	)
+	SET(LIBRARIES
+		${LIBRARIES}
+		${libuvc_LIBRARIES}
+	)
+ENDIF(libuvc_FOUND)
+
 IF(freenect2_FOUND)
 	SET(INCLUDE_DIRS
 		${INCLUDE_DIRS}
